2008-06-07  Pierre-Luc Beaudoin  <pierre-luc.beaudoin@collabora.co.uk>

With the help of Jonathon Jongsma.

        Reviewed by Dan Bernstein.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=19279
        REGRESSION (r32660): Text not redrawn correctly when selection changes

        * rendering/InlineTextBox.cpp:
        (WebCore::InlineTextBox::paint):
        Add a condition for when ePos <= sPos



Canonical link: https://commits.webkit.org/26865@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34414 268f45cc-cd09-0410-ab3c-d52691b4dbfc